bugfix - navigation overflow

--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -124,12 +124,14 @@
 .side-bar {
   width: fit-content;
   height: 100%;
+  min-width: 200px;
   max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
   position: relative;
   transition: all 0.3s ease;
+  overflow-y: auto;
 }
 
 .side-bar__heading {
@@ -156,6 +158,7 @@
 
 .side-bar__menu {
   list-style: none;
+  width: 100%;
   max-width: 100%;
   overflow-y: auto;
 }
@@ -180,10 +183,16 @@
 }
 
 .side-bar__menu--sub {
+  font-size: 0.8rem;
+  width: calc(100% - 0.5rem);
   height: 0;
   margin-left: 0.5rem;
   transition: all 0.3s ease;
   overflow: hidden;
+}
+
+.side-bar__menu--sub .side-bar__item {
+  padding: 0.75rem 1rem;
 }
 
 .side-bar__menu--sub.show {
@@ -200,6 +209,8 @@
     background-color: white;
     z-index: 999;
     transform: translateY(100%);
+    overflow-y: visible;
+    max-height: 80vw;
   }
 
   .side-bar__menu {
